kubernetes/apps/infra-cluster/network/pihole/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-internal
  namespace: network
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - dns.krapulax.home
  rules:
    - backendRefs:
        - name: pihole
          port: 80
