kubernetes/apps/infra-cluster/network/pihole/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-external
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dns.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-infra.krapulax.dev
    gethomepage.dev/description: "Pihole External service"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Infra Cluster - network"
    gethomepage.dev/href: "https://dns.krapulax.dev"
    gethomepage.dev/icon: "pi-hole.png"
    gethomepage.dev/name: "Pi-hole"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
  hostnames:
    - dns.krapulax.dev
  rules:
    - backendRefs:
        - name: pihole
          port: 80
